# golfzon-net-handicap-scorecard

./: .dockerignore  .gitignore  Dockerfile  HOLE_SCORES_FEATURE.md  IMPLEMENTATION_SUMMARY.md  OCR_FIX_SUMMARY.md  PRODUCTIONIZATION.md  QUICKSTART.md  README.md  alembic.ini  app.py  bootstrap_db.py  calculator.py  database.py  docker-compose.yml  env.example  export.py  leaderboard.py  models.py  ocr.py  parser.py  pyproject.toml  teams.py  test_ocr_images.py  test_output.txt  test_output2.txt  test_parser.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6f32cb6d9759_initial_migration.py  825adaf06c68_add_ocr_corrections_table.py
src/golfzon_ocr/: __init__.py  config.py  health.py  models.py
src/golfzon_ocr/db/: __init__.py  corrections.py  database.py
src/golfzon_ocr/export/: __init__.py  export.py
src/golfzon_ocr/processing/: __init__.py  calculator.py  ocr.py  parser.py  pattern_config.py  text_cleaner.py
src/golfzon_ocr/processing/extractors/: __init__.py  handicap_extractor.py  name_extractor.py  score_extractor.py
src/golfzon_ocr/processing/matchers/: __init__.py  base.py  line_matcher.py  score_matcher.py  table_matcher.py
src/golfzon_ocr/processing/validators/: __init__.py  player_validator.py
src/golfzon_ocr/services/: __init__.py  leaderboard.py  teams.py
tests/: conftest.py  test_1png_data.py  test_database.py  test_export.py  test_integration.py  test_leaderboard.py  test_parser_edge_cases.py  test_teams.py
